--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nippon-dark",
   "displayName": "nippon-dark",
   "description": "Dark color theme of traditional Japanese colors",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "publisher": "piste-jp",
   "engines": {
     "vscode": "^1.99.0"
   },
